syntax = "proto3";

package chat.v1;
option go_package = "internal/chat/pb";

import "chat/v1/model.proto";
import "google/protobuf/empty.proto";

service ChatService {
  rpc CreateChat(google.protobuf.Empty) returns (chat.v1.Chat) {};
  rpc GetChat(chat.v1.GetChatRequest) returns (chat.v1.Chat) {};
  rpc RenameChat(chat.v1.RenameChatRequest) returns (chat.v1.Chat) {};
  rpc DeleteChat(chat.v1.DeleteChatRequest) returns (google.protobuf.Empty) {};
  rpc CleanupChat(chat.v1.CleanupChatRequest) returns (google.protobuf.Empty) {};
  rpc ListChats(chat.v1.ListChatsRequest) returns (chat.v1.ListChatsResponse) {};
  rpc ProcessQuery(chat.v1.ProcessQueryRequest) returns (stream chat.v1.ChunkedResponse) {};
  rpc CancelProcessing(chat.v1.CancelProcessingRequest) returns (google.protobuf.Empty) {};
}
